--- a/basic.html
+++ b/basic.html
@@ -1,72 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NMIMS</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <link rel="stylesheet" href="./css/basic.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./css/basic.css" />
+  </head>
 
-<body>
+  <body>
     <aside id="sidebar">
-        <div id="sidebar-logo">
-            <img src="./img/logo-nmims.png">
-        </div>
+      <div id="sidebar-logo">
+        <img src="./img/logo-nmims.png" alt="Logo" title="Logo" />
+      </div>
 
-        <div class="accordion-header" id="heading-one">
-            <button id="button" class="accordion-button collapsed" type="button">
-                Open
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne"
+              aria-expanded="false"
+              aria-controls="flush-collapseOne"
+            >
+              Accordion 1
             </button>
-
-            <!-- <div id="open" class="accordion-body">
-                <ul>link</ul>
-                <ul>link</ul>
-                <ul>link</ul>
-                <ul>link</ul>
-                <ul>link</ul>
-            </div> -->
-
+          </h2>
+          <div
+            id="flush-collapseOne"
+            class="accordion-collapse collapse"
+            aria-labelledby="flush-headingOne"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">link1</div>
+            <div class="accordion-body">link2</div>
+            <div class="accordion-body">link3</div>
+            <div class="accordion-body">link4</div>
+          </div>
         </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo"
+              aria-expanded="false"
+              aria-controls="flush-collapseTwo"
+            >
+              Accordion 2
+            </button>
+          </h2>
+          <div
+            id="flush-collapseTwo"
+            class="accordion-collapse collapse"
+            aria-labelledby="flush-headingTwo"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">link1</div>
+            <div class="accordion-body">link2</div>
+            <div class="accordion-body">link3</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseThree"
+              aria-expanded="false"
+              aria-controls="flush-collapseThree"
+            >
+              Accordion 3
+            </button>
+          </h2>
+          <div
+            id="flush-collapseThree"
+            class="accordion-collapse collapse"
+            aria-labelledby="flush-headingThree"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">link1</div>
+            <div class="accordion-body">link2</div>
+          </div>
+        </div>
+      </div>
     </aside>
 
     <main id="main-area">
-        <header>
-            <div class="d-flex justify-content-between">
-            <i class="h3 fa-solid fa-bars m-3"></i>
-            <nav id="header" class=" navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            <a class="nav-link" href="#">Features</a>
-                            <a class="nav-link" href="#">Pricing</a>
-                        </div>
-                    </div>
+      <header>
+        <div class="d-flex justify-content-between">
+          <i id="menu-toggle-button" class="h3 fa-solid fa-bars"></i>
+          <nav id="header" class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="#">Pricing</a>
                 </div>
-            </nav>
+              </div>
+            </div>
+          </nav>
         </div>
-        </header>
+      </header>
 
-        <section id="content" class="p-5">
-            <h3>CONTENT</h3>
-            <h3>CONTENT</h3>
-        </section>
+      <section id="content" class="p-5">
+        <h3>CONTENT</h3>
+        <h3>CONTENT</h3>
+      </section>
 
-        <footer id="footer" class="text-center ">
-            @2022 Copyright
-        </footer>
+      <footer id="footer" class="text-center">@2022 Copyright</footer>
     </main>
 
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      let MenuToggleButton = document.getElementById("menu-toggle-button");
+      let menuVariable = 0;
 
+      MenuToggleButton.addEventListener("click", function (e) {
+        switch (menuVariable) {
+          case 0:
+            document
+              .querySelector("#sidebar")
+              .classList.add("hide-left-sidebar");
+            document
+              .querySelector("#main-area")
+              .classList.add("collapse-main-content");
+            menuVariable = 1;
+            break;
+
+          case 1:
+            document
+              .querySelector("#sidebar")
+              .classList.remove("hide-left-sidebar");
+            document
+              .querySelector("#main-area")
+              .classList.remove("collapse-main-content");
+            menuVariable = 0;
+            break;
+        }
+      });
+    </script>
+  </body>
 </html>
