--- a/basic.html
+++ b/basic.html
@@ -229,7 +229,7 @@
                     <div id="resume-photo" class="col-2"></div>
                     <div id="resume-name" class="col-10">
                         <div>Personal Details<i id="personal-details-edit" class="fa-solid fa-pen-fancy"></i></div>
-                        <div class="m-2">Full Name</div>
+                        <div class="m-2"><p>Full Name</p></div>
                         <div class="row">
                             <div class="col-3">Gender</div>
                             <div class="col-3">date of birth</div>
