--- a/index.html
+++ b/index.html
@@ -11,77 +11,29 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="./css/style.css" />
-
   <title>Learn Web Designing</title>
 </head>
 
 <body>
-  <aside id="left-sidebar">
-    <div id="sidebar-logo">
-      <img src="./img/logo-nmims.png" title="Logo" alt="Logo" />
+
+
+  <div id="resume-box" class="container">
+
+    <div class="cover-div">
     </div>
 
-    <ul class="nav-items">
-      <li>Dashboard</li>
-      <li>Job Applications</li>
-      <li>Proforma</li>
-    </ul>
-  </aside>
+    <div class="container">
+      <div id="personal-details-div" class="row">
+        <div id="left-side" class="col-12 col-md-6 col-lg-6 col-sm-12">Left Side</div>
+        <div id="right-side" class="col-12 col-md-6 col-lg-6 col-sm-12">right Side</div>
+      </div>
+    </div>
 
-  <main id="main-content">
-    <header id="header">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Another action</a>
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+    <div id="">
 
-    <section id="content-body" class="px-3">
-      <h1>CONTENT BODY</h1>
-      <h1>CONTENT BODY</h1>
-    </section>
-
-    <footer id="footer">
-      <h6>Footer</h6>
-    </footer>
-  </main>
+    </div>
+    <hr>
+  </div>
 
   <!-- INCLUDE JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
