--- a/index.html
+++ b/index.html
@@ -1,44 +1,329 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="crossorigin"
+    />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    />
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Learn Web Designing</title>
+  </head>
 
-  <link rel="stylesheet" href="./css/style.css" />
-  <title>Learn Web Designing</title>
-</head>
+  <body>
+    <div id="resume-box" class="container">
+      <div class="d-flex justify-content-end">
+        <i id="download-btn" class="h1 fa-solid fa-download"></i>
+      </div>
+      <div class="cover shadow-lg">
+        <div class="cover-div p-3 px-sm-4 p-lg-4">
+          <div class="row">
+            <div class="col-md-4 col-sm-12 col-lg-3">
+              <div class="avatar bg-white shadow-sm p-1">
+                <img
+                  src="/img/download (3).jpg"
+                  alt="Passport Size photo"
+                  width="200"
+                  height="200"
+                />
+              </div>
+            </div>
 
-<body>
+            <div
+              id="right-cover"
+              class="col-md-8 col-sm-12 col-lg-9 text-white"
+            >
+              <h3 p-3>Full Name</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
+                officia asperiores. Quae culpa omnis laborum rem? Dolorem minima
+                reiciendis eveniet corporis! Dicta eius dolor provident, quasi
+                excepturi commodi iusto est. Ipsa quasi id amet necessitatibus
+                officiis blanditiis quis saepe ab aperiam tempore ex voluptas
+                consequatur, molestiae laboriosam eveniet ipsum itaque odio
+                nihil at dolor modi velit ullam! Illo, minus optio.
+              </p>
+            </div>
+          </div>
+        </div>
 
+        <div id="personal-details-div" class="pt-4 px-3 px-sm-4 px-lg-4 mt-1">
+          <div class="row">
+            <div id="left-side" class="col-12 col-md-6 col-lg-6 col-sm-12">
+              <h3 class="p-3">Personal Details 1</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+                quis voluptatibus consectetur dolores accusantium deserunt
+                corrupti, culpa explicabo quod id fuga eius minus perferendis,
+                suscipit sit nulla dolorum autem odit? Similique reprehenderit
+                fugiat reiciendis quidem, dolore quaerat natus eos, aperiam
+                officiis dolorum id aspernatur earum temporibus. Aliquam
+                voluptatum aliquid optio assumenda enim laborum, asperiores eos
+                corrupti impedit, error provident quae. Dignissimos harum neque
+                ducimus, eveniet possimus laborum amet consequatur in pariatur
+                ab nesciunt officiis totam esse, quisquam mollitia. Maxime quod
+                tempore obcaecati qui tenetur, sequi fugit mollitia quis
+                voluptates adipisci.
+              </p>
+            </div>
+            <div id="right-side" class="col-12 col-md-6 col-lg-6 col-sm-12">
+              <h3 class="p-3">Personal Details 2</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Aliquid quam quo adipisci ipsum! Nemo aut atque ab non velit
+                animi amet incidunt, inventore expedita aspernatur earum! Eos
+                quam ipsum accusantium! Cum minus explicabo animi ipsum earum
+                necessitatibus perspiciatis! Rem laboriosam ipsum velit, sint
+                quo nisi, corrupti aperiam perspiciatis voluptatem qui
+                recusandae voluptatibus quos quod. Voluptatibus molestias nisi
+                maiores dignissimos architecto. Cumque commodi maxime minus
+                nulla quo odio ratione voluptate tenetur fugiat! Necessitatibus
+                incidunt itaque dicta obcaecati enim amet voluptas qui
+                temporibus delectus. Voluptates possimus ex fugiat quae
+                cupiditate. Sequi, beatae.
+              </p>
+            </div>
+          </div>
+        </div>
+        <hr />
 
-  <div id="resume-box" class="container">
+        <div id="education-div" class="px-3 px-sm-4 px-lg-4">
+          <div class="d-flex justify-content-center align-items-center">
+            <h3 class="mb-4 h3">Education</h3>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 col-lg-6 col-sm-12">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo
+                esse id, quas quibusdam iste repellat consequatur dolorum,
+                assumenda eius molestias unde inventore, quam tempora tempore
+                reiciendis impedit. Cum, odit obcaecati. Exercitationem porro
+                autem illo quas, magni maxime ea obcaecati possimus vero totam
+                repellendus necessitatibus, explicabo itaque architecto,
+                molestias cum tempora modi perferendis delectus inventore quia
+                dolor excepturi? Et, unde culpa? Illum aliquam ab corrupti,
+                perferendis quibusdam quas iste amet quasi beatae atque modi quo
+                aliquid reprehenderit assumenda, sunt culpa at quidem nostrum
+                unde saepe sed! Neque quisquam natus maxime iusto!
+              </p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 col-sm-12">
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
+                ratione quae harum dolores accusantium totam fuga ullam!
+                Maiores, officia adipisci aspernatur consectetur, natus error
+                inventore quo mollitia, unde exercitationem incidunt? Quos, quo
+                sint! At deserunt cumque molestias corrupti, dolorem distinctio
+                illo aperiam reiciendis nesciunt ad esse quaerat ab. Debitis id
+                fugiat autem unde eius odio amet nulla iste dolorem temporibus?
+                Nulla totam nihil nam nobis ipsa est cumque illum reprehenderit
+                culpa debitis. Praesentium aperiam tempora sint natus quas
+                excepturi delectus fugiat laudantium blanditiis! Eaque repellat
+                fugit quaerat, amet mollitia quidem!
+              </p>
+            </div>
+          </div>
+        </div>
+        <hr />
 
-    <div class="cover-div">
-    </div>
+        <div id="bank-details" class="px-3 px-sm-4 px-lg-4">
+          <div class="d-flex justify-content-center align-items-center">
+            <h3 class="mb-4 h3">Bank Details</h3>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 col-lg-6 col-sm-12">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              maiores error. Distinctio corporis aliquid necessitatibus aliquam
+              voluptatibus inventore laudantium est ab, veniam suscipit
+              voluptatum cumque? Architecto distinctio eius quia maiores. Error,
+              reiciendis aliquid ex, illo perferendis iusto vel praesentium
+              asperiores libero cupiditate accusantium quas adipisci numquam
+              ullam beatae quisquam. Quis molestiae inventore nemo eum iure
+              accusamus laboriosam eos fugit earum. Sunt cupiditate animi neque!
+              Laboriosam, est. Ipsam sed optio quae reprehenderit odio commodi
+              mollitia quo perspiciatis doloribus. Eveniet incidunt voluptatem
+              inventore exercitationem voluptas autem hic eaque, eius quos
+              aperiam quis.
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 col-sm-12">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis provident quis ea soluta laudantium nam maxime
+              tempora eos quae placeat quia labore molestias harum explicabo ab,
+              magnam quam earum vitae. Hic voluptatibus architecto in maxime
+              doloremque! Quos fugit eum quidem sed dolorum, facilis voluptas
+              nam earum? Nisi, at, architecto minus repellat amet incidunt cum
+              reiciendis voluptatibus perferendis nulla exercitationem
+              reprehenderit? Deleniti minus assumenda eum! Necessitatibus, est
+              soluta velit exercitationem adipisci delectus optio rerum, eveniet
+              fugit nulla assumenda quod sapiente tempore provident modi
+              dolorem. Accusantium deleniti sunt modi consequuntur voluptates
+              sit.
+            </div>
+          </div>
+        </div>
+        <hr />
 
-    <div class="container">
-      <div id="personal-details-div" class="row">
-        <div id="left-side" class="col-12 col-md-6 col-lg-6 col-sm-12">Left Side</div>
-        <div id="right-side" class="col-12 col-md-6 col-lg-6 col-sm-12">right Side</div>
+        <div id="publications" class="px-3 px-sm-4 px-lg-4">
+          <div class="d-flex justify-content-center align-items-center">
+            <h3 class="mb-4 h3">Publications</h3>
+          </div>
+          <div class="row">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates
+            doloribus, quia non id, nam est voluptate dolorem dolore fugit enim
+            voluptas numquam iure officiis excepturi, neque earum? Fugit, earum
+            tempore? Et, nihil odio incidunt dicta possimus beatae in dolorem
+            sunt alias animi dolor fugit eius, esse veritatis iure vitae iste
+            rem consequuntur magni praesentium suscipit neque quae aliquid
+            totam? Nobis? Molestias illum, aperiam quas magnam adipisci
+            aspernatur veritatis ex perferendis repudiandae quos dicta beatae
+            recusandae aliquam quam voluptas hic, quod nihil. Laudantium eveniet
+            ullam minima optio porro! Dolorum, nisi quas? Ipsa maiores
+            doloremque nisi numquam necessitatibus ducimus exercitationem id
+            fuga facere? Vel quos perspiciatis deleniti eos nulla et, deserunt
+            est, maiores molestias fuga praesentium, ab vero eaque quam
+            architecto explicabo!
+          </div>
+        </div>
+        <hr />
+
+        <div id="research" class="px-3 px-sm-4 px-lg-4">
+          <div class="d-flex justify-content-center align-items-center">
+            <h3 class="mb-4 h3">Research</h3>
+          </div>
+          <div class="row">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates
+            doloribus, quia non id, nam est voluptate dolorem dolore fugit enim
+            voluptas numquam iure officiis excepturi, neque earum? Fugit, earum
+            tempore? Et, nihil odio incidunt dicta possimus beatae in dolorem
+            sunt alias animi dolor fugit eius, esse veritatis iure vitae iste
+            rem consequuntur magni praesentium suscipit neque quae aliquid
+            totam? Nobis? Molestias illum, aperiam quas magnam adipisci
+            aspernatur veritatis ex perferendis repudiandae quos dicta beatae
+            recusandae aliquam quam voluptas hic, quod nihil. Laudantium eveniet
+            ullam minima optio porro! Dolorum, nisi quas? Ipsa maiores
+            doloremque nisi numquam necessitatibus ducimus exercitationem id
+            fuga facere? Vel quos perspiciatis deleniti eos nulla et, deserunt
+            est, maiores molestias fuga praesentium, ab vero eaque quam
+            architecto explicabo!
+          </div>
+        </div>
+        <hr />
       </div>
     </div>
 
-    <div id="">
+    <!-- INCLUDE JS -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"
+      integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"
+      integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKNRRhy5X5AAOnx5S09ydFYWWNSfcEqDTTHgtNA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+      integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $(document).on("click", "#download-btn", function () {
+        var elementHTML = document.getElementById("resume-box");
 
-    </div>
-    <hr>
-  </div>
+        html2canvas(elementHTML, {
+          useCORS: true,
+          onrendered: function (canvas) {
+            let pdf = new jsPDF("p", "pt", "letter");
 
-  <!-- INCLUDE JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
-</body>
+            let pageHeight = 980;
+            let pageWidth = 900;
+            for (var i = 0; i <= elementHTML.clientHeight / pageHeight; i++) {
+              let srcImg = canvas;
+              let sX = 0;
+              let sY = pageHeight * i; // start 1 pageHeight down for every new page
+              let sWidth = pageWidth;
+              let sHeight = pageHeight;
+              let dX = 0;
+              let dY = 0;
+              let dWidth = pageWidth;
+              let dHeight = pageHeight;
 
+              window.onePageCanvas = document.createElement("canvas");
+              onePageCanvas.setAttribute("width", pageWidth);
+              onePageCanvas.setAttribute("height", pageHeight);
+              let ctx = onePageCanvas.getContext("2d");
+              ctx.drawImage(
+                srcImg,
+                sX,
+                sY,
+                sWidth,
+                sHeight,
+                dX,
+                dY,
+                dWidth,
+                dHeight
+              );
+
+              var canvasDataURL = onePageCanvas.toDataURL("image/png", 1.0);
+              var width = onePageCanvas.width;
+              var height = onePageCanvas.clientHeight;
+
+              if (i > 0)
+                // if we're on anything other than the first page, add another page
+                pdf.addPage(612, 864); // 8.5" x 12" in pts (inches*72)
+
+              pdf.setPage(i + 1); // now we declare that we're working on that page
+              pdf.addImage(
+                canvasDataURL,
+                "PNG",
+                20,
+                40,
+                width * 0.62,
+                height * 0.62
+              ); // add content to the page
+            }
+
+            // Save the PDF
+            pdf.save("document.pdf");
+          },
+        });
+      });
+    </script>
+  </body>
 </html>
